--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header class="without-description">
-        <h1>fegran.github.io</h1>
+        <h1>Trying to be an astronomer</h1>
         <p></p>
         <p class="view"><a href="https://github.com/fegran">View the Project on GitHub <small>fegran</small></a></p>
         <ul>
@@ -28,7 +28,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Lets see what happend if I delete this sentence</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
