--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     <div class="wrapper">
       <header class="without-description">
         <h1>Trying to be an astronomer</h1>
+        <h2>Felipe Gran</h2>
         <p></p>
-        <p class="view"><a href="https://github.com/fegran">View the Project on GitHub <small>fegran</small></a></p>
+        <!--<p class="view"><a href="https://github.com/fegran">View the Project on GitHub <small>fegran</small></a></p>
         <ul>
           <li class="single"><a href="https://github.com/fegran/fegran.github.io">View On <strong>GitHub</strong></a></li>
-        </ul>
+        </ul>-->
       </header>
       <section>
         <h3>
