--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
+<div class="header">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Group 1</a></li>
+          <li><a href="index.html">Group 2</a></li>
+          <li><a href="index.html">Group 3</a></li>
+          <li><a href="index.html" target="_blank">Code</a></li>
+        </ul>
+        <h3 class="text-muted">CHILE 2014</h3>
+      </div>
+
 <p>Lets see what happend if I delete this sentence</p>
 
 <pre><code>$ cd your_repo_root/repo_name
