--- a/index.html
+++ b/index.html
@@ -11,16 +11,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
 
-<div class="header">
 
-<ul class="nav nav-pills pull-right">
-<li class="active"><a href="index.html">Home</a></li>
-<li><a href="index.html">Group 1</a></li>
-<li><a href="index.html">Group 2</a></li>
-<li><a href="index.html">Group 3</a></li>
-<li><a href="index.html" target="_blank">Code</a></li>
-</ul>
-<h3 class="text-muted">CHILE 2014</h3>
+<dl class="tabs" data-tab>
+  <dd class="active"><a href="#panel1">Tab 1</a></dd>
+  <dd><a href="#panel2">Tab 2</a></dd>
+  <dd><a href="#panel3">Tab 3</a></dd>
+  <dd><a href="#panel4">Tab 4</a></dd>
+</dl>
+<div class="tabs-content">
+  <div class="content active" id="panel1">
+    <p>This is the first panel of the basic tab example. This is the first panel of the basic tab example.</p>
+  </div>
+  <div class="content" id="panel2">
+    <p>This is the second panel of the basic tab example. This is the second panel of the basic tab example.</p>
+  </div>
+  <div class="content" id="panel3">
+    <p>This is the third panel of the basic tab example. This is the third panel of the basic tab example.</p>
+  </div>
+  <div class="content" id="panel4">
+    <p>This is the fourth panel of the basic tab example. This is the fourth panel of the basic tab example.</p>
+  </div>
 </div>
 
     <!--[if lt IE 9]>
