--- a/index.html
+++ b/index.html
@@ -2,102 +2,116 @@
 <html>
   <head>
     <meta charset="utf-8">
+
+    <!-- Redireccionar automaticamente
+
+    <meta http-equiv="refresh" content="1;url=http://www.astro.puc.cl/~fgran">
+
+    -->
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Trying to be an astronomer</title>
+    <title>Felipe Gran</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-
-
-
-
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
     <div class="wrapper">
-      <header class="without-description">
-        <h1>Trying to be an astronomer</h1>
-        <h2>Felipe Gran</h2>
-        <p></p>
-        <!--<p class="view"><a href="https://github.com/fegran">View the Project on GitHub <small>fegran</small></a></p>
+      <header>
+        <h1><strong>Felipe Gran</strong></h1>
+        <p>
+          MSc. Student <br>
+          <a href="http://www.astro.puc.cl">Institute of Astrophysics</a><br>
+          <a href="http://www.puc.cl">PUC </a>, Chile
+        </p>
+        <br><br>
+        <p>
+          fgran@astro.puc.cl <br>
+          fegran@uc.cl <br>
+        </p>
+
+
+        <!-- Botones
+
+        <p class="view"><a href="http://github.com/orderedlist/minimal">
+        View the Project on GitHub <small>orderedlist/minimal</small></a></p>
         <ul>
-          <li class="single"><a href="https://github.com/fegran/fegran.github.io">View On <strong>GitHub</strong></a></li>
-        </ul>-->
+          <li><a href="https://github.com/orderedlist/minimal/zipball/master">
+          Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/orderedlist/minimal/tarball/master">
+          Download <strong>TAR Ball</strong></a></li>
+          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>
+          GitHub</strong></a></li>
+        </ul>
+
+        -->
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h2>
+          Current research
+        </h2>
+        <ul>
+          <li> Variable stars: RR Lyrae </li>
+          <li> Galactic structure </li>
+          <li><a href="http://vvvsurvey.drupalgardens.com/"> VVV Survey </a></li>
+        </ul>
 
-<div class="tabs">
-    <ul class="tab-links">
-        <li class="active"><a href="#tab1">Tab #1</a></li>
-        <li><a href="#tab2">Tab #2</a></li>
-        <li><a href="#tab3">Tab #3</a></li>
-        <li><a href="#tab4">Tab #4</a></li>
-    </ul>
- 
-    <div class="tab-content">
-        <div id="tab1" class="tab active">
-            <p>Tab #1 content goes here!</p>
-            <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis.</p>
-        </div>
- 
-        <div id="tab2" class="tab">
-            <p>Tab #2 content goes here!</p>
-            <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis. In hac habitasse platea dictumst. Ut euismod tempus hendrerit. Morbi ut adipiscing nisi. Etiam rutrum sodales gravida! Aliquam tellus orci, iaculis vel.</p>
-        </div>
- 
-        <div id="tab3" class="tab">
-            <p>Tab #3 content goes here!</p>
-            <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum ri.</p>
-        </div>
- 
-        <div id="tab4" class="tab">
-            <p>Tab #4 content goes here!</p>
-            <p>Donec pulvinar neque sed semper lacinia. Curabitur lacinia ullamcorper nibh; quis imperdiet velit eleifend ac. Donec blandit mauris eget aliquet lacinia! Donec pulvinar massa interdum risus ornare mollis. In hac habitasse platea dictumst. Ut euismod tempus hendrerit. Morbi ut adipiscing nisi. Etiam rutrum sodales gravida! Aliquam tellus orci, iaculis vel.</p>
-        </div>
-    </div>
-</div>
-<!--
-<p>Lets see what happend if I delete this sentence</p>
+        <h2>
+          I want to learn more about
+        </h2>
+        <ul>
+          <li> Python </li>
+          <li> Machine learning applied to astronomy </li>
+        </ul>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+        <h2>
+          Publications:
+        </h2>
+          <ul>
+            <li><a href="http://adsabs.harvard.edu/abs/2015arXiv150100947G">Bulge RR Lyrae stars in the VVV tile b201  </a></li>
+            <li> Go to the <a href="http://bit.ly/1CIxXcv">ADS  </a></li>
+          </ul>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+        <h2>
+          Useful information
+        </h2>
+        <p>
+          Coming soon :)
+        </p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+        <!-- Codigo en un viñeta
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+        <pre><code>['a', 'b'].map { |x| x.uppercase }</code></pre></li>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+        -->
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+        <!-- Tabla
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+        <table>
+          <tbody>
+          <tr><th> ID </th><th> Name </th><th> Rank </th></tr>
+          <tr><td> 1 </td><td> Tom Preston-Werner </td><td> Awesome </td></tr>
+          <tr><td> 2 </td><td> Albert Einstein </td><td> Nearly as awesome </td></tr>
+          </tbody>
+        </table>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+        -->
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+        <!-- Linea horizontal
+
+        <hr/>
+
+        -->
+
       </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <footer>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+    <script src="javascripts/scale.fix.js"></script>
   </body>
 </html>
