Thesis and VVV Meeting updates

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <li> Variable stars: RR Lyrae </li>
           <li> Galactic structure </li>
           <li><a href="http://vvvsurvey.drupalgardens.com/"> VVV Survey </a></li>
+          <li> MSc. thesis: "Outer bulge RR Lyrae stars in the VVV Survey" (July 2015)</li>
         </ul>
 
         <h2>
@@ -78,9 +79,10 @@
         <h2>
           Useful information
         </h2>
-        <p>
-          Coming soon :)
-        </p>
+        <ul>
+          <li><a href="http://xabier4.wix.com/6th-vvv-meeting#!program/c24vz">Program available of the 6th VVV Meeting ! </a></li>
+          <li> The python codes associated with my thesis will be available soon  :) </li>
+        </ul>
 
 
         <!-- Codigo en un viñeta
