--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         </p>
         <br><br>
         <p>
+          <a href="CV_FGran.pdf">CV </a> (Feb. 2015)
+        </p>
+        <p>
           fgran@astro.puc.cl <br>
           fegran@uc.cl <br>
         </p>
