--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="wrapper">
       <header>
         <h1><strong>Felipe Gran</strong></h1>
+        <p><em> Welcome to my <del> very basic </del> webpage ! </em><p>
         <p>
           MSc. Student <br>
           <a href="http://www.astro.puc.cl">Institute of Astrophysics</a><br>
@@ -60,7 +61,8 @@
           <li> Variable stars: RR Lyrae </li>
           <li> Galactic structure </li>
           <li><a href="http://vvvsurvey.drupalgardens.com/"> VVV Survey </a></li>
-          <li> MSc. thesis: "Outer bulge RR Lyrae stars in the VVV Survey" (July 2015)</li>
+          <li> MSc. thesis: "Outer bulge RR Lyrae stars in the VVV Survey"
+            (July 2015)</li>
         </ul>
 
         <h2>
@@ -75,7 +77,8 @@
           Publications:
         </h2>
           <ul>
-            <li><a href="http://adsabs.harvard.edu/abs/2015arXiv150100947G">Bulge RR Lyrae stars in the VVV tile b201  </a></li>
+            <li><a href="http://adsabs.harvard.edu/abs/2015arXiv150100947G">
+              Bulge RR Lyrae stars in the VVV tile b201  </a></li>
             <li> Go to the <a href="http://bit.ly/1CIxXcv">ADS  </a></li>
           </ul>
 
@@ -83,8 +86,10 @@
           Useful information
         </h2>
         <ul>
-          <li><a href="http://xabier4.wix.com/6th-vvv-meeting#!program/c24vz">Program available of the 6th VVV Meeting ! </a></li>
-          <li> The python codes associated with my thesis will be available soon  :) </li>
+          <li><a href="http://xabier4.wix.com/6th-vvv-meeting#!program/c24vz">
+            Program available of the 6 <sup>th</sup> VVV Meeting ! </a></li>
+          <li> The python codes associated with my thesis will be
+            available soon  :) </li>
         </ul>
 
 
