6th VVV Meeting update !

--- a/index.html
+++ b/index.html
@@ -79,15 +79,25 @@
           <ul>
             <li><a href="http://adsabs.harvard.edu/abs/2015arXiv150100947G">
               Bulge RR Lyrae stars in the VVV tile b201  </a></li>
-            <li> Go to the <a href="http://bit.ly/1CIxXcv">ADS  </a></li>
+            <li> Other publications as a coauthor (<a href="http://bit.ly/1CIxXcv">ADS </a>)</li>
+          </ul>
+
+        <h2>
+          6<sup>th</sup> VVV Meeting
+        </h2>
+          <ul>
+            <li><a href="http://xabier4.wix.com/6th-vvv-meeting#!program/c24vz">
+              Program available of the 6 <sup>th</sup> VVV Meeting ! </a></li>
+              <li> <a href="../6th_VVV_Meeting/Slides/FGran.pdf">Slides</a>, plots and, python codes of my oral presentation: </li>
+              <p> <a href="../6th_VVV_Meeting/python/FGran_RRLyr_outer_bulge_6th_VVV_Meeting.html">IPython notebook</a> &emsp;
+                  <a href="https://github.com/fegran/6th_VVV_Meeting">Github repository </a>
+              </p>
           </ul>
 
         <h2>
           Useful information
         </h2>
         <ul>
-          <li><a href="http://xabier4.wix.com/6th-vvv-meeting#!program/c24vz">
-            Program available of the 6 <sup>th</sup> VVV Meeting ! </a></li>
           <li> The python codes associated with my thesis will be
             available soon  :) </li>
         </ul>
