--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <ul>
             <li><a href="http://xabier4.wix.com/6th-vvv-meeting#!program/c24vz">
               Program available of the 6 <sup>th</sup> VVV Meeting ! </a></li>
-              <li> <a href="../6th_VVV_Meeting/Slides/FGran.pdf">Slides</a>, plots and, python codes of my oral presentation: </li>
-              <p> <a href="../6th_VVV_Meeting/python/FGran_RRLyr_outer_bulge_6th_VVV_Meeting.html">IPython notebook</a> &emsp;
+              <li> <a href="6th_VVV_Meeting_FGran.pdf">Slides</a>, plots and, python codes of my oral presentation: </li>
+              <p> <a href="6th_VVV_Meeting_FGran.html">IPython notebook</a> &emsp;
                   <a href="https://github.com/fegran/6th_VVV_Meeting">Github repository </a>
               </p>
           </ul>
