index font sizes

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         -->
       </header>
       <section>
-        <h2>
+        <h3>
           Current research
-        </h2>
+        </h3>
         <ul>
           <li> Variable stars: RR Lyrae </li>
           <li> Galactic structure </li>
@@ -65,38 +65,39 @@
             (July 2015)</li>
         </ul>
 
-        <h2>
+        <h3>
           I want to learn more about
-        </h2>
+        </h3>
         <ul>
           <li> Python </li>
           <li> Machine learning applied to astronomy </li>
         </ul>
 
-        <h2>
-          Publications:
-        </h2>
+        <h3>
+          Publications
+        </h3>
           <ul>
             <li><a href="http://adsabs.harvard.edu/abs/2015arXiv150100947G">
               Bulge RR Lyrae stars in the VVV tile b201  </a></li>
             <li> Other publications as a coauthor (<a href="http://bit.ly/1CIxXcv">ADS </a>)</li>
           </ul>
 
-        <h2>
+        <h3>
           6<sup>th</sup> VVV Meeting
-        </h2>
+        </h3>
           <ul>
             <li><a href="http://xabier4.wix.com/6th-vvv-meeting#!program/c24vz">
               Program available of the 6 <sup>th</sup> VVV Meeting ! </a></li>
-              <li> <a href="6th_VVV_Meeting_FGran.pdf">Slides</a>, plots and, python codes of my oral presentation: </li>
+              <li> <a href="6th_VVV_Meeting_FGran.pdf">Slides</a>, plots and,
+                python codes of my oral presentation: </li>
               <p> <a href="6th_VVV_Meeting_FGran.html">IPython notebook</a> &emsp;
                   <a href="https://github.com/fegran/6th_VVV_Meeting">Github repository </a>
               </p>
           </ul>
 
-        <h2>
+        <h3>
           Useful information
-        </h2>
+        </h3>
         <ul>
           <li> The python codes associated with my thesis will be
             available soon  :) </li>
