Include SOCHIAS contributions

--- a/index.html
+++ b/index.html
@@ -83,16 +83,27 @@
           </ul>
 
         <h3>
-          6<sup>th</sup> VVV Meeting
+          6<sup>th</sup> VVV Meeting/XII SOCHIAS Meeting
         </h3>
           <ul>
             <li><a href="http://xabier4.wix.com/6th-vvv-meeting#!program/c24vz">
               Program available of the 6 <sup>th</sup> VVV Meeting ! </a></li>
               <li> <a href="6th_VVV_Meeting_FGran.pdf">Slides</a>, plots and,
-                python codes of my oral presentation: </li>
-              <p> <a href="6th_VVV_Meeting_FGran.html">IPython notebook</a> &emsp;
-                  <a href="https://github.com/fegran/6th_VVV_Meeting">Github repository </a>
+                python codes of the oral presentation: </li>
+              <p>
+                <a href="6th_VVV_Meeting_FGran.html">IPython notebook</a> &emsp;
+                <a href="https://github.com/fegran/6th_VVV_Meeting">Github repository </a>
               </p>
+              <li> <a href="http://sochias.cl/reuniones/nacionales/108-reuniones-subpaginas/178-posters-presentations">
+                Poster presentations at the XII SOCHIAS Meeting </a>
+              </li>
+              <li>
+                Poster contribution: <a href="XII_SOCHIAS_FGran.pdf">"Outer bulge RR Lyrae
+                stars in the VVV Survey"</a>
+              </li>
+
+
+
           </ul>
 
         <h3>
