--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <a href="https://github.com/fegran/6th_VVV_Meeting">Github repository </a>
               </p>
               <li> <a href="http://sochias.cl/reuniones/nacionales/108-reuniones-subpaginas/178-posters-presentations">
-                Poster presentations at the XII SOCHIAS Meeting </a>
+                Poster presentations at the XII SOCHIAS Meeting </a> / <a href="XII_SOCHIAS_Slide_FGran.pdf">1min slide</a>
               </li>
               <li>
                 Poster contribution: <a href="XII_SOCHIAS_FGran.pdf">"Outer bulge RR Lyrae
