--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           Publications
         </h3>
           <ul>
-            <li><a href="http://adsabs.harvard.edu/abs/2015arXiv150100947G">
+            <li><a href="http://adsabs.harvard.edu/abs/2015A%26A...575A.114G">
               Bulge RR Lyrae stars in the VVV tile b201  </a></li>
             <li> Other publications as a coauthor (<a href="http://bit.ly/1CIxXcv">ADS </a>)</li>
           </ul>
