--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
         <ul>
           <li> Variable stars: RR Lyrae </li>
           <li> Galactic structure </li>
-          <li><a href="http://vvvsurvey.drupalgardens.com/"> VVV Survey </a></li>
-          <li> MSc. thesis: "Outer bulge RR Lyrae stars in the VVV Survey"
-            (July 2015)</li>
+          <li><a href="http://vvvsurvey.drupalgardens.com/"> VVV Survey </a> </li>
+          <li> MSc. thesis: "Outer bulge RR Lyrae stars in the VVV Survey" </li>
         </ul>
 
         <h3>
@@ -84,61 +83,18 @@
           </ul>
 
         <h3>
-          6<sup>th</sup> VVV Meeting/XII SOCHIAS Meeting
+          Oral Presentations
         </h3>
           <ul>
-            <li><a href="http://xabier4.wix.com/6th-vvv-meeting#!program/c24vz">
-              Program available of the 6 <sup>th</sup> VVV Meeting ! </a></li>
-              <li> <a href="6th_VVV_Meeting_FGran.pdf">Slides</a>, plots and,
-                python codes of the oral presentation: </li>
-              <p>
-                <a href="6th_VVV_Meeting_FGran.html">IPython notebook</a> &emsp;
-                <a href="https://github.com/fegran/6th_VVV_Meeting">Github repository </a>
-              </p>
-              <li> <a href="http://sochias.cl/reuniones/nacionales/108-reuniones-subpaginas/178-posters-presentations">
-                Poster presentations at the XII SOCHIAS Meeting </a> / <a href="FGran_SOCHIAS_Slide.pdf">1min slide</a>
-              </li>
               <li>
-                Poster contribution: <a href="XII_SOCHIAS_FGran.pdf">"Outer bulge RR Lyrae
-                stars in the VVV Survey"</a>
+                6<sup>th</sup> VVV Science Meeting:
               </li>
+              "Outer bulge RR Lyrae stars in the VVV Survey" <br>
 
-
-
+              <a href="6th_VVV_Meeting/6th_VVV_Meeting_FGran.pdf">Slides</a>,
+              <a href="6th_VVV_Meeting/6th_VVV_Meeting_FGran.html">IPython notebook</a>, and
+              <a href="https://github.com/fegran/6th_VVV_Meeting">Github repository </a>
           </ul>
-
-        <h3>
-          Useful information
-        </h3>
-        <ul>
-          <li> The python codes associated with my thesis will be
-            available soon  :) </li>
-        </ul>
-
-
-        <!-- Codigo en un viñeta
-
-        <pre><code>['a', 'b'].map { |x| x.uppercase }</code></pre></li>
-
-        -->
-
-        <!-- Tabla
-
-        <table>
-          <tbody>
-          <tr><th> ID </th><th> Name </th><th> Rank </th></tr>
-          <tr><td> 1 </td><td> Tom Preston-Werner </td><td> Awesome </td></tr>
-          <tr><td> 2 </td><td> Albert Einstein </td><td> Nearly as awesome </td></tr>
-          </tbody>
-        </table>
-
-        -->
-
-        <!-- Linea horizontal
-
-        <hr/>
-
-        -->
 
       </section>
       <footer>
