MSc. thesis defense!
Upload and actualize old stuff

--- a/index.html
+++ b/index.html
@@ -3,26 +3,24 @@
   <head>
     <meta charset="utf-8">
 
-    <!-- Redireccionar automaticamente
-
-    <meta http-equiv="refresh" content="1;url=http://www.astro.puc.cl/~fgran">
-
-    -->
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Felipe Gran</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+
   </head>
   <body>
     <div class="wrapper">
       <header>
         <h1><strong>Felipe Gran</strong></h1>
         <p><em> Welcome to my <del> very basic </del> webpage ! </em><p>
+        <p>
+          PhD. Student <br>
+          <a href="http://www.ing.puc.cl/ciencia-de-la-computacion/"></a>Department of Computer Science<br>
+          <a href="http://www.puc.cl">PUC </a>, Chile
+        </p>
         <p>
           MSc. Student <br>
           <a href="http://www.astro.puc.cl">Institute of Astrophysics</a><br>
@@ -38,21 +36,6 @@
           fegran@uc.cl <br>
         </p>
 
-
-        <!-- Botones
-
-        <p class="view"><a href="http://github.com/orderedlist/minimal">
-        View the Project on GitHub <small>orderedlist/minimal</small></a></p>
-        <ul>
-          <li><a href="https://github.com/orderedlist/minimal/zipball/master">
-          Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/orderedlist/minimal/tarball/master">
-          Download <strong>TAR Ball</strong></a></li>
-          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>
-          GitHub</strong></a></li>
-        </ul>
-
-        -->
       </header>
       <section>
         <h3>
@@ -61,17 +44,21 @@
         <ul>
           <li> Variable stars: RR Lyrae </li>
           <li> Galactic structure </li>
-          <li><a href="http://vvvsurvey.drupalgardens.com/"> VVV Survey </a> </li>
+          <li><a href="http://www.vvvsurvey.org/"> VVV Survey </a> </li>
           <li> MSc. thesis: "Outer bulge RR Lyrae stars in the VVV Survey" </li>
+                <ul style="list-style-type:circle">
+                  <li><a href="Tesis_MSc_FGran.pdf">Thesis manuscript</a></li>
+                  <li>Slides, IPython notebook, GitHub repository </li>
+                </ul>
         </ul>
 
-        <h3>
+        <!-- <h3>
           I want to learn more about
         </h3>
         <ul>
           <li> Python </li>
           <li> Machine learning applied to astronomy </li>
-        </ul>
+        </ul> -->
 
         <h3>
           Publications
@@ -79,7 +66,7 @@
           <ul>
             <li><a href="http://adsabs.harvard.edu/abs/2015A%26A...575A.114G">
               Bulge RR Lyrae stars in the VVV tile b201  </a></li>
-            <li> Other publications as a coauthor (<a href="http://bit.ly/1CIxXcv">ADS </a>)</li>
+            <li> Publications as a coauthor (<a href="http://bit.ly/1CIxXcv">ADS </a>)</li>
           </ul>
 
         <h3>
