--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p><em> Welcome to my <del> very basic </del> webpage ! </em><p>
         <p>
           PhD. Student <br>
-          <a href="http://www.ing.puc.cl/ciencia-de-la-computacion"></a>Department of Computer Science<br>
+          <a href="http://www.ing.puc.cl/ciencia-de-la-computacion">Department of Computer Science</a><br>
           <a href="http://www.puc.cl">PUC </a>, Chile
         </p>
         <p>
