--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li> MSc. thesis: "Outer bulge RR Lyrae stars in the VVV Survey" </li>
                 <ul style="list-style-type:circle">
                   <li><a href="Tesis_MSc_FGran.pdf">Thesis manuscript</a></li>
-                  <li>Slides, IPython notebook, GitHub repository </li>
+                  <li><a href="VVV_Outer_bulge_RRab.pdf">Slides</a>, <a href="VVV_Outer_bulge_RRab.html">IPython notebook</a>, GitHub repository </li>
                 </ul>
         </ul>
 
