--- a/VVV_Outer_bulge_RRab.html
+++ b/VVV_Outer_bulge_RRab.html
@@ -172,6 +172,15 @@ div#notebook {
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Mapping-the-Outer-Bulge-with-RR-Lyrae-stars-in-the-VVV-Survey">Mapping the Outer Bulge with RR Lyrae stars in the VVV Survey<a class="anchor-link" href="#Mapping-the-Outer-Bulge-with-RR-Lyrae-stars-in-the-VVV-Survey">&#182;</a></h2><h3 id="Felipe-Gran">Felipe Gran<a class="anchor-link" href="#Felipe-Gran">&#182;</a></h3><h3 id="fegran@uc.cl-/-fgran@astro.puc.cl">fegran@uc.cl / fgran@astro.puc.cl<a class="anchor-link" href="#fegran@uc.cl-/-fgran@astro.puc.cl">&#182;</a></h3>
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[1]:</div>
