Linux survey added
Caracterizacion de la población activa de la Sala Linux

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
               <a href="6th_VVV_Meeting/6th_VVV_Meeting_FGran.html">IPython notebook</a>, and
               <a href="https://github.com/fegran/6th_VVV_Meeting">Github repository </a>
           </ul>
+        </h3>
+          Linux survey
+        </h3>
+        <ul>
+          <a href="Encuestas/Linux_survey.html">Ipython notebook</a>
+        </ul>
 
       </section>
       <footer>
