--- a/Encuestas/Linux_survey.html
+++ b/Encuestas/Linux_survey.html
@@ -186,7 +186,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="IPython-notebook-con-codigo-python-para-reproducit-plots-y-analisis">IPython notebook con codigo python para reproducit plots y analisis<a class="anchor-link" href="#IPython-notebook-con-codigo-python-para-reproducit-plots-y-analisis">&#182;</a></h3>
+<h3 id="IPython-notebook-con-codigo-python-para-reproducir-plots">IPython notebook con codigo python para reproducir plots<a class="anchor-link" href="#IPython-notebook-con-codigo-python-para-reproducir-plots">&#182;</a></h3>
 </div>
 </div>
 </div>
