--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
         <ul>
           <a href="Encuestas/Linux_survey.html">Ipython notebook</a>
         </ul>
+        <h3>
+          Seminario
+        </h3>
+        <ul>
+          <a href="Seminario/P1.pdf">P1</a>
+        </ul>
 
       </section>
       <footer>
