Better order of Seminario
FG

--- a/index.html
+++ b/index.html
@@ -76,18 +76,16 @@
               <a href="6th_VVV_Meeting/6th_VVV_Meeting_FGran.pdf">Slides</a>,
               <a href="6th_VVV_Meeting/6th_VVV_Meeting_FGran.html">IPython notebook</a>, and
               <a href="https://github.com/fegran/6th_VVV_Meeting">Github repository </a>
+              <li>
+                Seminario:
+              </li>
+              <a href="Seminario/P1.pdf">P1</a>
           </ul>
         <h3>
           Linux survey
         </h3>
         <ul>
           <a href="Encuestas/Linux_survey.html">Ipython notebook</a>
-        </ul>
-        <h3>
-          Seminario
-        </h3>
-        <ul>
-          <a href="Seminario/P1.pdf">P1</a>
         </ul>
 
       </section>
