--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           Linux survey
         </h3>
         <ul>
-          <a href="Encuestas/Linux_survey.html">Ipython notebook</a>
+          <a href="Encuestas/Linux_survey.html">IPython notebook</a>
         </ul>
 
       </section>
