--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1><strong>Felipe Gran</strong></h1>
         <p><em> Welcome to my <del> very basic </del> webpage ! </em><p>
         <p>
-          MSc. Student <br>
+          PhD. Student <br>
           <a href="http://www.astro.puc.cl">Institute of Astrophysics</a><br>
           <a href="http://www.puc.cl">PUC </a>, Chile
         </p>
