--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           Current research
         </h3>
         <ul>
+          <li> Globular clusters in the < href="http://www.sdss.org/surveys/apogee-2/"> APOGEE </a> survey </li>
           <li> Variable stars: RR Lyrae </li>
           <li> Galactic structure </li>
           <li><a href="http://www.vvvsurvey.org/"> VVV Survey </a> </li>
@@ -59,6 +60,8 @@
           Publications
         </h3>
           <ul>
+            <li><a href="http://adsabs.harvard.edu/abs/2016arXiv160401336G">
+              Mapping the outer bulge with RRab stars from the VVV Survey </a></li>
             <li><a href="http://adsabs.harvard.edu/abs/2015A%26A...575A.114G">
               Bulge RR Lyrae stars in the VVV tile b201  </a></li>
             <li> Publications as a coauthor (<a href="http://bit.ly/1CIxXcv">ADS </a>)</li>
