--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           Current research
         </h3>
         <ul>
-          <li> Globular clusters in the < href="http://www.sdss.org/surveys/apogee-2/"> APOGEE </a> survey </li>
+          <li> Globular clusters in the <a href="http://www.sdss.org/surveys/apogee-2/"> APOGEE </a> survey </li>
           <li> Variable stars: RR Lyrae </li>
           <li> Galactic structure </li>
           <li><a href="http://www.vvvsurvey.org/"> VVV Survey </a> </li>
