--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
         </h3>
         <ul>
           <li> Globular clusters in the <a href="http://www.sdss.org/surveys/apogee-2/"> APOGEE </a> survey </li>
-          <li> Variable stars: RR Lyrae </li>
-          <li> Galactic structure </li>
-          <li><a href="http://www.vvvsurvey.org/"> VVV Survey </a> </li>
+          <li> RR Lyrae stars and Galactic structure in the <a href="http://www.vvvsurvey.org/"> VVV Survey </a>  </li>
           <li> MSc. thesis: "Outer bulge RR Lyrae stars in the VVV Survey" </li>
                 <ul style="list-style-type:circle">
                   <li><a href="Tesis_MSc_FGran.pdf">Thesis manuscript</a></li>
