--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
           Linux survey
         </h3>
         <ul>
-          <a href="Encuestas/Linux_survey.html">IPython notebook</a>
+          <a href="Encuestas/Linux_survey.html">IPython notebook</a>,
+          <a html="https://github.com/fegran/Linux_survey"> Github repo</a>
         </ul>
 
       </section>
