--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </h3>
         <ul>
           <a href="Encuestas/Linux_survey.html">IPython notebook</a>,
-          <a href="https://github.com/fegran/Linux_survey"> Github repo</a>
+          <a href="https://github.com/fegran/Linux_survey"> Github repository</a>
         </ul>
 
       </section>
