--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
           Current research
         </h3>
         <ul>
-          <li> Globular clusters in the <a href="http://www.sdss.org/surveys/apogee-2/"> APOGEE </a> survey </li>
+          <li> Globular clusters in the <a href="http://www.sdss.org/surveys/apogee-2/"> APOGEE </a> Survey </li>
           <li> RR Lyrae stars and Galactic structure in the <a href="http://www.vvvsurvey.org/"> VVV Survey </a>  </li>
           <li> MSc. thesis: "Outer bulge RR Lyrae stars in the VVV Survey" </li>
                 <ul style="list-style-type:circle">
                   <li><a href="Tesis_MSc_FGran.pdf">Thesis manuscript</a></li>
-                  <li><a href="VVV_Outer_bulge_RRab.pdf">Slides</a>, <a href="VVV_Outer_bulge_RRab.html">IPython notebook</a>, GitHub repository </li>
+                  <li><a href="VVV_Outer_bulge_RRab.pdf">Slides</a>,
+                    <a href="https://github.com/fegran/VVV-RRLyr-in-the-outer-bulge">GitHub repository</a></li>
                 </ul>
         </ul>
 
