--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <li>
                 Seminario:
               </li>
-              <a href="Seminario/P1.pdf">P1</a>, <a href="Seminario/P2.pdf">P2</a>
+              <a href="Seminario/P1.pdf">P1</a>, <a href="Seminario/P2.pdf">P2</a>, <a href="Seminario/P3.pdf">P3</a>
           </ul>
         <h3>
           Linux survey
