--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </p>
         <br>
         <p>
-          <a href="CV_FGran.pdf">CV </a> (Nov. 2015)
+          <a href="CV_FGran.pdf">CV </a> (Aug. 2016)
         </p>
         <br>
         <p>
@@ -47,42 +47,17 @@
                 </ul>
         </ul>
 
-        <!-- <h3>
-          I want to learn more about
-        </h3>
-        <ul>
-          <li> Python </li>
-          <li> Machine learning applied to astronomy </li>
-        </ul> -->
-
         <h3>
           Publications
         </h3>
           <ul>
-            <li><a href="http://adsabs.harvard.edu/abs/2016arXiv160401336G">
+            <li><a href="http://adsabs.harvard.edu/abs/2016A%26A...591A.145G">
               Mapping the outer bulge with RRab stars from the VVV Survey </a></li>
             <li><a href="http://adsabs.harvard.edu/abs/2015A%26A...575A.114G">
               Bulge RR Lyrae stars in the VVV tile b201  </a></li>
             <li> Publications as a coauthor (<a href="http://bit.ly/1CIxXcv">ADS </a>)</li>
           </ul>
 
-        <h3>
-          Oral Presentations
-        </h3>
-          <ul>
-              <li>
-                6<sup>th</sup> VVV Science Meeting:
-              </li>
-              "Outer bulge RR Lyrae stars in the VVV Survey" <br>
-
-              <a href="6th_VVV_Meeting/6th_VVV_Meeting_FGran.pdf">Slides</a>,
-              <a href="6th_VVV_Meeting/6th_VVV_Meeting_FGran.html">IPython notebook</a>, and
-              <a href="https://github.com/fegran/6th_VVV_Meeting">Github repository </a>
-              <li>
-                Seminario:
-              </li>
-              <a href="Seminario/P1.pdf">P1</a>, <a href="Seminario/P2.pdf">P2</a>, <a href="Seminario/P3.pdf">P3</a>
-          </ul>
         <h3>
           Linux survey
         </h3>
