--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
           <a href="Encuestas/Linux_survey.html">IPython notebook</a>,
           <a href="https://github.com/fegran/Linux_survey"> Github repository</a>
         </ul>
+        <ul>
+          <a href="Encuestas/Profesores.html">Resultados Profesores</a>,
+        </ul>
 
       </section>
       <footer>
