--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
         </h3>
         <ul>
           <a href="Encuestas/Linux_survey.html">IPython notebook</a>,
-          <a href="https://github.com/fegran/Linux_survey"> Github repository</a>
-        </ul>
-        <ul>
-          <a href="Encuestas/Profesores.html">Resultados Profesores</a>,
+          <a href="https://github.com/fegran/Linux_survey"> Github repository</a><br>
+          <a href="Encuestas/Profesores.html">Resultados Profesores</a>
         </ul>
 
       </section>
