--- a/Encuestas/Profesores.html
+++ b/Encuestas/Profesores.html
@@ -4,8 +4,13 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
+<title>Resultados Linux survey 22/3/2017</title>
 </head>
 <body>
+
+<h1><strong>Resultados encuesta:</strong></h1>
+<h3> Con qué profesor/a (o ninguno/a) tendrías ramos por el resto de tu carrera? </h3>
+<h3><p> Coloca el mouse encima de cada barra para ver el nombre y votos</p><h3>
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
