--- a/Encuestas/Profesores.html
+++ b/Encuestas/Profesores.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h1><strong>Resultados encuesta:</strong></h1>
+<h1><strong>Resultados encuesta 22 Marzo 2017:</strong></h1>
 <h3> Con qué profesor/a (o ninguno/a) tendrías ramos por el resto de tu carrera? </h3>
 <h3><p> Coloca el mouse encima de cada barra para ver el nombre y votos</p><h3>
 
