--- a/Encuestas/Profesores.html
+++ b/Encuestas/Profesores.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="Profesores/style.css">
 <title>Resultados Linux survey 22/3/2017</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 
-<script src="draw.js" ></script>
+<script src="Profesores/draw.js" ></script>
 
 </body>
 </html>
