--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <ul>
           <a href="Encuestas/Linux_survey.html">IPython notebook</a>,
           <a href="https://github.com/fegran/Linux_survey"> Github repository</a><br>
-          <a href="Encuestas/Profesores.html">Resultados Profesores</a>
+          <a href="Encuestas/Profesores.html">Resultados Profesores</a><br>
+          <a href="Encuestas/BDay.html">Resultados Cumpleaños</a>
         </ul>
 
       </section>
