--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
         </p>
         <br>
         <p>
-          <a href="CV_FGran.pdf">CV </a> (Mar. 2019)
+          <a href="CV_FGran.pdf">CV </a> (May. 2019)
         </p>
         <br>
         <p>
           fgran@astro.puc.cl <br>
           fegran@uc.cl <br>
+          @fegranm <br>
         </p>
 
       </header>
@@ -37,7 +38,7 @@
           Current research
         </h3>
         <ul>
-          <li> Globular clusters in the <a href="http://www.sdss.org/surveys/apogee-2/"> APOGEE </a> Survey </li>
+          <li> Globular clusters in the <a href="http://www.sdss.org/surveys/apogee-2/"> APOGEE </a>  and <a href="https://www.cosmos.esa.int/web/gaia/dr2"> Gaia </a> Surveys </li>
           <li> RR Lyrae stars and Galactic structure in the <a href="http://www.vvvsurvey.org/"> VVV Survey </a>  </li>
           <li> MSc. thesis: "Outer bulge RR Lyrae stars in the VVV Survey" </li>
                 <ul style="list-style-type:circle">
@@ -51,22 +52,14 @@
           Publications
         </h3>
           <ul>
-            <li><a href="http://adsabs.harvard.edu/abs/2016A%26A...591A.145G">
+            <li><a href="https://ui.adsabs.harvard.edu/abs/2019arXiv190410872G/abstract">
+              Globular cluster candidates in the Galactic bulge: <br>  Gaia and VVV view of the latest discoveries </a></li>
+            <li><a href="https://ui.adsabs.harvard.edu/abs/2016A%26A...591A.145G/abstract">
               Mapping the outer bulge with RRab stars from the VVV Survey </a></li>
-            <li><a href="http://adsabs.harvard.edu/abs/2015A%26A...575A.114G">
+            <li><a href="https://ui.adsabs.harvard.edu/abs/2015A%26A...575A.114G/abstract">
               Bulge RR Lyrae stars in the VVV tile b201  </a></li>
-            <li> Publications as a coauthor (<a href="http://bit.ly/1CIxXcv">ADS </a>)</li>
+            <li> Publications as a coauthor (<a href="https://ui.adsabs.harvard.edu/search/filter_author_facet_hier_fq_author=NOT&filter_author_facet_hier_fq_author=(*%3A*%20NOT%20author_facet_hier%3A%221%2FGran%2C%20F%2FGran%2C%20Fredrik%22)&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FGran%2C%20F%2FGran%2C%20Frode%20W%22&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=((*%3A*%20NOT%20author_facet_hier%3A%221%2FGran%2C%20F%2FGran%2C%20Fredrik%22)%20NOT%20author_facet_hier%3A%221%2FGran%2C%20F%2FGran%2C%20Frode%20W%22)&q=author%3A%22Gran%2C%20F.%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">ADS </a>)</li>
           </ul>
-
-        <h3>
-          Linux survey
-        </h3>
-        <ul>
-          <a href="Encuestas/Linux_survey.html">IPython notebook</a>,
-          <a href="https://github.com/fegran/Linux_survey"> Github repository</a><br>
-          <a href="Encuestas/Profesores.html">Resultados Profesores</a><br>
-          <a href="Encuestas/BDay.html">Resultados Cumpleaños</a>
-        </ul>
 
       </section>
       <footer>
