--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><strong>Felipe Gran</strong></h1>
+        <h1><strong>Felipe Gran M.</strong></h1>
         <p><em> Welcome to my <del> very basic </del> webpage ! </em><p>
         <p>
           PhD. Student <br>
@@ -23,7 +23,7 @@
         </p>
         <br>
         <p>
-          <a href="CV_FGran.pdf">CV </a> (May. 2019)
+          <a href="CV_FGran.pdf">CV </a> (Jan. 2020)
         </p>
         <br>
         <p>
