--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         </p>
         <br>
         <p>
-          <a href="CV_FGran.pdf">CV </a> (Jan. 2020)
+          <a href="CV_FGran.pdf">CV </a> (Feb. 2020)
         </p>
         <br>
         <p>
           fgran@astro.puc.cl <br>
+          fgran@eso.org<br>
           fegran@uc.cl <br>
           @fegranm <br>
         </p>
