--- a/juegosofi2.html
+++ b/juegosofi2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Juego2</title>
+    <title>Unity WebGL Player | La Carrera del Rey</title>
     <link rel="shortcut icon" href="TemplateData2/favicon.ico">
     <link rel="stylesheet" href="TemplateData2/style.css">
     <script src="TemplateData2/UnityProgress.js"></script>
