--- a/juegosofi3.html
+++ b/juegosofi3.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build3";
       var loaderUrl = buildUrl + "/BuildCCS.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BuildCCS.data.br",
-        frameworkUrl: buildUrl + "/BuildCCS.framework.js.br",
-        codeUrl: buildUrl + "/BuildCCS.wasm.br",
+        dataUrl: buildUrl + "/BuildCCS.data",
+        frameworkUrl: buildUrl + "/BuildCCS.framework.js",
+        codeUrl: buildUrl + "/BuildCCS.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "FS",
         productName: "ConejosCrushSaga",
