--- a/juegosofi3.html
+++ b/juegosofi3.html
@@ -53,8 +53,8 @@
           mobileWarning.style.display = "none";
         }, 5000);
       } else {
-        canvas.style.width = "100%";
-        canvas.style.height = "100%";
+        canvas.style.width = "960";
+        canvas.style.height = "600";
       }
       loadingBar.style.display = "block";
 
