--- a/_pages/games.html
+++ b/_pages/games.html
@@ -1,14 +1,14 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "Games"
+permalink: /games/
 author_profile: true
 ---
 
 {% include base_path %}
 
-
-{% for post in site.portfolio %}
+<!-- 
+{% for post in site.games %}
   {% include archive-single.html %}
 {% endfor %}
-
+ -->
