--- a/_pages/ideas.html
+++ b/_pages/ideas.html
@@ -1,12 +1,13 @@
 ---
 layout: archive
-permalink: /year-archive/
-title: "Blog posts"
+permalink: /ideas/
+title: "Ideas"
 author_profile: true
-redirect_from:
-  - /wordpress/blog-posts/
+<!-- redirect_from:
+  - /wordpress/blog-posts/ -->
 ---
 
+<!-- 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
@@ -16,4 +17,4 @@ redirect_from:
     {% capture written_year %}{{ year }}{% endcapture %}
   {% endif %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %} -->
