--- a/_pages/games.html
+++ b/_pages/games.html
@@ -7,6 +7,8 @@ author_profile: true
 
 {% include base_path %}
 
+Existe esta pagina?
+
 <!-- 
 {% for post in site.games %}
   {% include archive-single.html %}
