--- a/_pages/games.html
+++ b/_pages/games.html
@@ -5,11 +5,13 @@ permalink: /games/
 author_profile: true
 ---
 
-{% include base_path %}
-
-Existe esta pagina?
+Aqui va algo:
 
 <!-- 
+
+{% include base_path %}
+
+
 {% for post in site.games %}
   {% include archive-single.html %}
 {% endfor %}
